work on deployment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://whaleloop.github.io/love-story",
+  "homepage": "https://whaleloop.github.io/love_story",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
